<?xml version="1.0" encoding="utf-8"?>
<!-- 遥测数据1界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackgroud">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <!-- 业务名称 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_yggl"
                />
            <TextView
                android:id="@+id/yaoce_yggl"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="KW"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 业务类型 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_wggl"
                />
            <TextView
                android:id="@+id/yaoce_wggl"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="kVar"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 调度等级 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_glys"
                />
            <TextView
                android:id="@+id/yaoce_glys"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 调度等级 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_wyglys"
                />
            <TextView
                android:id="@+id/yaoce_wyglys"
                style="@style/BusinessInfoRightEditText"
                />
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 影响程度 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_pl"
                />
            <TextView
                android:id="@+id/yaoce_pl"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="Hz"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 中断起始时间 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_abxdy"
                />
            <TextView
                android:id="@+id/yaoce_abxdy"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="V"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 中断终止时间 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_bcxdy"
                />
            <TextView
                android:id="@+id/yaoce_bcxdy"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="V"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 采取措施 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_caxdy"
                />
            <TextView
                android:id="@+id/yaoce_caxdy"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="V"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 备注 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_abxdythd"
                />
            <TextView
                android:id="@+id/yaoce_abxdythd"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="%"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 业务名称 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_bcxdythd"
                />
            <TextView
                android:id="@+id/yaoce_bcxdythd"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="%"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 业务名称 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_caxdythd"
                />
            <TextView
                android:id="@+id/yaoce_caxdythd"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="%"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 业务类型 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_axzldy"
                />
            <TextView
                android:id="@+id/yaoce_axzldy"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="V"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 调度等级 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_dlbphd"
                />
            <TextView
                android:id="@+id/yaoce_dlbphd"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="%"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 影响程度 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_axwcdl"
                />
            <TextView
                android:id="@+id/yaoce_axwcdl"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="A"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 中断起始时间 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_bxwcdl"
                />
            <TextView
                android:id="@+id/yaoce_bxwcdl"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="A"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 中断终止时间 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaoce_cxxwcdl"
                />
            <TextView
                android:id="@+id/yaoce_cxxwcdl"
                style="@style/BusinessInfoRightEditText"
                />
            <TextView
                style="@style/textDanwei"
                android:text="A"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>