<?xml version="1.0" encoding="utf-8"?>
<!-- 遥调数据3界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackgroud"
    android:padding="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <!-- 业务名称 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb2cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb2cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 业务类型 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb3cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb3cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 调度等级 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb4cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb4cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 影响程度 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb5cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb5cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 中断起始时间 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb6cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb6cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 中断终止时间 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb7cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb7cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 采取措施 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb8cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb8cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 备注 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb9cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb9cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 业务名称 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb10cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb10cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 业务名称 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb11cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb11cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 业务类型 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb12cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb12cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 调度等级 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb13cs"
                />
            <EditText
                android:id="@+id/yaotiao_xb13cs"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"
                android:text="次"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 影响程度 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb1sn"
                />
            <EditText
                android:id="@+id/yaotiao_xb1sn"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 中断起始时间 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb2sn"
                />
            <EditText
                android:id="@+id/yaotiao_xb2sn"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"/>
        </LinearLayout>
        <ImageView
            style="@style/Line_horizontal"/>
        <!-- 中断终止时间 -->
        <LinearLayout
            style="@style/WorkInfoLinearLayout">
            <TextView
                style="@style/WorkInfoLeftTextView"
                android:text="@string/yaotiao_xb3sn"
                />
            <EditText
                android:id="@+id/yaotiao_xb3sn"
                style="@style/WorkInfoRightEditText"
                android:tag="@string/edittag_wufuhao"/>
            <TextView
                style="@style/textDanwei"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_data3commit"
        style="@style/submitButton"/>
</LinearLayout>